# certi-prep

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: quiz_0401_explanation.md
input/: jgol_1060.txt  jgol_1129.txt  jgol_1151.txt  jgol_1151_1.txt  jgol_1225.txt  jgol_1225_1.txt  jgol_1225_2.txt  jgol_1225_3.txt  jgol_1295.txt  jgol_1374.txt  jgol_1374_1.txt  jgol_1374_2.txt  jgol_1374_3.txt  jgol_1462_1.txt  jgol_1620.txt  jgol_1620_1.txt  jgol_1620_2.txt  jgol_1662.txt  jgol_1662_1.txt  jgol_1662_2.txt  jgol_1726.txt  jgol_1733_1.txt  jgol_1733_2.txt  jgol_1825_1.txt  jgol_1825_2.txt  jgol_2058.txt  jgol_2058_1.txt  jgol_2058_2.txt  jgol_2194_1.txt  jgol_2613.txt  jgol_3142.txt  jgol_3336.txt  jgol_3572.txt  jgol_3572_1.txt  quiz_0101.txt  quiz_0102.txt  quiz_0201.txt  quiz_0202.txt  quiz_0301.txt  quiz_0301_1.txt  (+8 more)
output/: jgol_1374_1_o.txt  jgol_1374_o.txt  jgol_1620_1_o.txt  jgol_1726_o.txt  jgol_1825_2_o.txt  jgol_1825_o.txt  jgol_3142_o.txt  jgol_3572_1_o.txt  jgol_3572_o.txt  quiz_0101_o.txt  quiz_0201_o.txt  quiz_0301_o.txt  (+12 more)
test/: CMakeLists.txt  foo_test.cc  jgol_1060_mst.cc  jgol_1078_juggling.cc  jgol_1129_line_meet.cc  jgol_1151_convexhull.cc  jgol_1225_ppl_watch.cc  jgol_1295_binsearch.cc  jgol_1374_addsub.cc  jgol_1374_addsub_bk.cc  jgol_1462_treasure.cc  jgol_1620_phonenum.cc  jgol_1662_bishop.cc  jgol_1695_areanum.cc  jgol_1726_max_in_range.cc  jgol_1733_omok.cc  jgol_1825_invest.cc  jgol_1889_nqueen.cc  jgol_2058_hedgehog.cc  jgol_2194_yogurt.cc  jgol_2613_tomato.cc  jgol_3142_id_check.cc  jgol_3336_rec_polygon.cc  jgol_3572_postfix.cc  quiz_0101_ant_escape.cc  quiz_0102_min_island.cc  quiz_0201_tile_fill.cc  quiz_0202_barrier.cc  quiz_0301_mst_spanning.cc  quiz_0302_find_path.cc  quiz_0303_elephant.cc  quiz_0401_cannel_fuel.cc  quiz_0402_unit_creation.cc  quiz_0503_festival.cc  quiz_0504_permutation.cc  quiz_0601_dir_cnt.cc  swea_0000_template.cc  swea_10804_mirror.cc  swea_1206_view.cc  swea_1211_ladder2.cc  (+26 more)
